--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
+  qr_flutter: ^4.1.0
+  get: ^4.6.6
+  qr_code_scanner: ^0.4.0
 
 dev_dependencies:
   flutter_test:
